lifeguard-derive/tests/ui/compile_error_relation_invalid_column_ref_path.stderr
error: Column reference path contains invalid identifier "foo-bar" at position 1 in "foo-bar::Column::Id". Identifiers must be valid Rust identifiers (e.g., start with a letter or underscore, contain only alphanumeric characters and underscores).
  --> tests/ui/compile_error_relation_invalid_column_ref_path.rs:14:5
   |
14 |     Invalid,
   |     ^^^^^^^

error[E0433]: failed to resolve: there are too many leading `super` keywords
 --> tests/ui/compile_error_relation_invalid_column_ref_path.rs:8:10
  |
8 | #[derive(DeriveRelation)]
  |          ^^^^^^^^^^^^^^ there are too many leading `super` keywords
  |
  = note: this error originates in the derive macro `DeriveRelation` (in Nightly builds, run with -Z macro-backtrace for more info)

error[E0601]: `main` function not found in crate `$CRATE`
  --> tests/ui/compile_error_relation_invalid_column_ref_path.rs:15:2
   |
15 | }
   |  ^ consider adding a `main` function to `$DIR/tests/ui/compile_error_relation_invalid_column_ref_path.rs`
